option('build_game', type: 'boolean', value: true, description:
    'Also compile the game from ./Game'
)
option('static_game', type: 'boolean', value: false, description:
    'Link the game statically'
)
option('base_path', type: 'string', value: '', description:
    'Data base path'
)
option('platform', type: 'combo', choices : ['auto', 'windows', 'linux', 'switch'], value: 'auto', description:
    'Platform to build for (auto, Windows, Linux, Switch)'
)
option('subsystem', type: 'combo', choices : ['auto', 'SDL2', 'GL3', 'DX9'], value: 'auto', description:
    'Force a rendering backend (auto, SDL2, GL3, DX9)'
)
option('rsdk_rev', type: 'integer', value: 2, min: 1, max: 3, description:
    'RSDK Revision, 1 for Mania, 2 for Plus, 3 for Origins'
)
option('plus', type: 'boolean', value: false, description:
    'Enable or disable the Plus DLC'
)
