sources += files(
	'main.cpp',
	'RSDK/Core/RetroEngine.cpp',
	'RSDK/Core/Math.cpp',
	'RSDK/Core/Reader.cpp',
	'RSDK/Core/Link.cpp',
	'RSDK/Core/ModAPI.cpp',
	'RSDK/Dev/Debug.cpp',
	'RSDK/Storage/Storage.cpp',
	'RSDK/Storage/Text.cpp',
	'RSDK/Graphics/Drawing.cpp',
	'RSDK/Graphics/Scene3D.cpp',
	'RSDK/Graphics/Animation.cpp',
	'RSDK/Graphics/Sprite.cpp',
	'RSDK/Graphics/Palette.cpp',
	'RSDK/Graphics/Video.cpp',
	'RSDK/Audio/Audio.cpp',
	'RSDK/Input/Input.cpp',
	'RSDK/Scene/Scene.cpp',
	'RSDK/Scene/Collision.cpp',
	'RSDK/Scene/Object.cpp',
	'RSDK/Scene/Objects/DefaultObject.cpp',
	'RSDK/Scene/Objects/DevOutput.cpp',
	'RSDK/User/Core/UserAchievements.cpp',
	'RSDK/User/Core/UserCore.cpp',
	'RSDK/User/Core/UserLeaderboards.cpp',
	'RSDK/User/Core/UserPresence.cpp',
	'RSDK/User/Core/UserStats.cpp',
	'RSDK/User/Core/UserStorage.cpp',
)

includes += include_directories('.')