sources += files(
	'all/tinyxml2/tinyxml2.cpp',
	'all/iniparser/iniparser.cpp',
	'all/iniparser/dictionary.cpp',
	'all/miniz/miniz.c',
)

includes += include_directories(
    'all/',
    'all/tinyxml2/',
    'all/iniparser/',
)

# cxx = meson.get_compiler('cpp')
# cwd = meson.current_source_dir()

# if platform == 'windows' and subsystem == 'GL3'
# 	vendor_glew = declare_dependency(
# 		dependencies: cxx.find_library('glew32s', dirs: cwd/'gl3/glew/lib/Release/x64/')
# 		include_directories: include_directories('gl3/glfw/include')
# 	)
# 	vendor_glfw = declare_dependency(
# 		dependencies: cxx.find_library('glfw3', dirs: cwd/'gl3/glfw/lib-mingw-w64/')
# 		include_directories: include_directories('gl3/glfw/include')
# 	)
# endif
